fixed issue with web app not fitting on screen

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,10 +36,10 @@ header #menu-btn {
 }
 
 footer {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: 100%;
-    height: 50px;
+    height: 52px;
 }
 
 footer .glyphicon {
